--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "node",
+    "start": "node bot.js",
     "watch": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvacord": "^5.4.8",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "get-random-values": "^2.0.0"
+    "get-random-values": "^2.0.0",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prettier": "2.8.7"
   }
 }
