--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "get-random-values": "^2.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
